--- a/banana/package.json
+++ b/banana/package.json
@@ -11,9 +11,15 @@
   },
   "dependencies": {
     "axios": "^1.7.8",
+    "express-session": "^1.18.1",
     "jwt-decode": "^4.0.0",
+    "lottie-web": "^5.12.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-lottie": "^1.2.10",
     "react-router-dom": "^7.0.1",
     "react-toastify": "^10.0.6"
   },
